--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -2,19 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sys' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mabspath(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../scripts\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Now you can import your modules\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdata_processor\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdata_processor\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataProcessor\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
-      "File \u001b[0;32m~/Statistic Praktikum/scripts/data_processor.py:4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfuzzywuzzy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m process\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mlogging\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[43msys\u001b[49m\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mabspath(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../configs\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mconfig\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mDataProcessor\u001b[39;00m:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sys' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Loading data from Excel file.\n",
+      "INFO:root:Combining columns: 17 and 18\n",
+      "INFO:root:Dropping empty columns.\n",
+      "INFO:root:Setting new headers.\n",
+      "INFO:root:Applying typo corrections to Geschlecht.\n",
+      "INFO:root:Applying typo corrections to Priorisierte Hand.\n",
+      "INFO:root:Calculating and updating BMI.\n",
+      "INFO:root:Missing or incorrect ages calculated/corrected using 'Geb.-Datum'.\n",
+      "INFO:root:Converting specified columns to numeric values.\n",
+      "INFO:root:Getting invalid rows.\n",
+      "INFO:root:Type-based invalid rows: 54\n",
+      "INFO:root:Custom invalid rows: 32\n",
+      "INFO:root:Combined invalid rows: 55\n",
+      "INFO:root:Marking invalid data.\n",
+      "INFO:root:Saving DataFrame to ../data/clean/cleaned_data.xlsx\n",
+      "INFO:root:DataFrame saved to ../data/clean/cleaned_data.xlsx\n"
      ]
     }
    ],
