--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,12 +31,15 @@
    "source": [
     "import sys  \n",
     "import os\n",
+    "import importlib\n",
     "sys.path.insert(1, os.path.abspath('../scripts'))\n",
     "sys.path.insert(1, os.path.abspath('../configs'))\n",
     "import data_processor\n",
+    "importlib.reload(data_processor)\n",
     "from data_processor import DataProcessor\n",
     "import config\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from IPython.display import display\n",
     "\n",
     "\n",
@@ -64,7 +67,7 @@
     "\n",
     "    df_invalid = processor.get_invalid_rows(config.expected_types)\n",
     "\n",
-    "    processor.mark_invalid_data(config.expected_types, placeholder='-')\n",
+    "    processor.mark_invalid_data(config.expected_types, placeholder=np.nan)\n",
     "\n",
     "\n",
     "    # Save the DataFrame\n",
