--- a/notebooks/statistical_study.ipynb
+++ b/notebooks/statistical_study.ipynb
@@ -2,90 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 97 entries, 0 to 96\n",
-      "Data columns (total 20 columns):\n",
-      " #   Column                 Non-Null Count  Dtype         \n",
-      "---  ------                 --------------  -----         \n",
-      " 0   Gesamtgruppe           97 non-null     int64         \n",
-      " 1   Type                   97 non-null     object        \n",
-      " 2   Gruppe                 97 non-null     int64         \n",
-      " 3   Geschlecht             97 non-null     object        \n",
-      " 4   Geb.-Datum             96 non-null     datetime64[ns]\n",
-      " 5   Alter, Jahre           97 non-null     int64         \n",
-      " 6   Körpergröße, cm        97 non-null     int64         \n",
-      " 7   Gewicht, Kg            97 non-null     float64       \n",
-      " 8   BMI                    97 non-null     float64       \n",
-      " 9   Ruhepuls               94 non-null     float64       \n",
-      " 10  Fußlänge Rechts (cm)   68 non-null     float64       \n",
-      " 11  Fußlänge Links (cm)    68 non-null     float64       \n",
-      " 12  Handlänge Rechts (cm)  68 non-null     float64       \n",
-      " 13  Handlänge Links (cm)   69 non-null     float64       \n",
-      " 14  Priorisierte Hand      73 non-null     object        \n",
-      " 15  Wassermenge (ml/Tag)   73 non-null     float64       \n",
-      " 16  Stamina Rechts (s)     68 non-null     float64       \n",
-      " 17  Stamina Links (s)      68 non-null     float64       \n",
-      " 18  Luftanhalten (s)       70 non-null     float64       \n",
-      " 19  Häufigkeit Blinken     47 non-null     float64       \n",
-      "dtypes: datetime64[ns](1), float64(12), int64(4), object(3)\n",
-      "memory usage: 15.3+ KB\n",
-      "None\n",
-      "       Gesamtgruppe     Gruppe           Geb.-Datum  Alter, Jahre  \\\n",
-      "count     97.000000  97.000000                   96     97.000000   \n",
-      "mean      32.092784   1.237113  1990-01-03 22:00:00     33.938144   \n",
-      "min        1.000000   1.000000  1938-04-27 00:00:00     18.000000   \n",
-      "25%       13.000000   1.000000  1993-12-01 00:00:00     22.000000   \n",
-      "50%       26.000000   1.000000  2000-04-26 00:00:00     24.000000   \n",
-      "75%       51.000000   1.000000  2002-05-04 00:00:00     30.000000   \n",
-      "max       75.000000   2.000000  2005-09-18 00:00:00     86.000000   \n",
-      "std       22.257060   0.427522                  NaN     21.397924   \n",
-      "\n",
-      "       Körpergröße, cm  Gewicht, Kg        BMI    Ruhepuls  \\\n",
-      "count        97.000000    97.000000  97.000000   94.000000   \n",
-      "mean        174.092784    74.338144  24.519588   74.319149   \n",
-      "min         155.000000    43.000000  17.500000   51.000000   \n",
-      "25%         166.000000    60.000000  21.200000   65.000000   \n",
-      "50%         172.000000    73.000000  23.200000   72.000000   \n",
-      "75%         182.000000    84.000000  25.200000   83.750000   \n",
-      "max         204.000000   137.000000  49.500000  105.000000   \n",
-      "std          11.230615    18.891083   5.996694   13.601243   \n",
-      "\n",
-      "       Fußlänge Rechts (cm)  Fußlänge Links (cm)  Handlänge Rechts (cm)  \\\n",
-      "count             68.000000            68.000000              68.000000   \n",
-      "mean              24.979412            24.994118              17.898529   \n",
-      "min               22.000000            22.000000              16.000000   \n",
-      "25%               23.500000            23.375000              17.000000   \n",
-      "50%               25.000000            25.000000              18.000000   \n",
-      "75%               26.050000            26.000000              18.500000   \n",
-      "max               30.000000            30.000000              28.000000   \n",
-      "std                1.874301             1.891685               1.731835   \n",
-      "\n",
-      "       Handlänge Links (cm)  Wassermenge (ml/Tag)  Stamina Rechts (s)  \\\n",
-      "count             69.000000             73.000000           68.000000   \n",
-      "mean              17.911594           1927.397260          215.172794   \n",
-      "min               15.000000            500.000000           85.000000   \n",
-      "25%               17.000000           1500.000000          148.250000   \n",
-      "50%               18.000000           1700.000000          180.000000   \n",
-      "75%               18.500000           2300.000000          301.250000   \n",
-      "max               28.000000           7000.000000          500.000000   \n",
-      "std                1.759306            934.115784           98.745359   \n",
-      "\n",
-      "       Stamina Links (s)  Luftanhalten (s)  Häufigkeit Blinken  \n",
-      "count          68.000000         70.000000           47.000000  \n",
-      "mean          199.841912         63.317143           25.659574  \n",
-      "min            62.000000         24.250000            1.000000  \n",
-      "25%           129.000000         45.500000           15.000000  \n",
-      "50%           155.000000         59.250000           19.000000  \n",
-      "75%           262.250000         73.750000           32.500000  \n",
-      "max           600.000000        143.000000           88.000000  \n",
-      "std           105.185204         22.989183           18.915460  \n"
+      "Low BMI Pulse Mean: 73.21538461538462\n",
+      "High BMI Pulse Mean: 76.79310344827586\n",
+      "T-Statistic: -1.1804182990314658\n",
+      "P-Value: 0.24087686510365608\n"
      ]
     }
    ],
@@ -101,6 +28,10 @@
     "import config # type: ignore\n",
     "importlib.reload(config)\n",
     "import pandas as pd\n",
+    "from scipy import stats\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import statsmodels.api as sm\n",
     "from IPython.display import display\n",
     "\n",
     "\n",
@@ -111,20 +42,37 @@
     "    #analysis.summarize_data()\n",
     "\n",
     "\n",
-    "    df_subset_bmi_pulse = analysis.generate_subset(config.columns_q1)\n",
+    "    df_subset_bmi_puls = analysis.generate_subset(config.columns_q1)\n",
     "    df_subset_priohand = analysis.generate_subset(config.columns_q2)\n",
     "    df_subset_geschlecht_wassermenge = analysis.generate_subset(config.columns_q3)\n",
-    "    df_subset_q4 = analysis.generate_subset(config.columns_q4)\n",
-    "    df_subset_q5 = analysis.generate_subset(config.columns_q5)\n",
-    "    df_subset_q6 = analysis.generate_subset(config.columns_q6)\n",
-    "    df_subset_q7 = analysis.generate_subset(config.columns_q7)\n",
+    "    df_subset_blink = analysis.generate_subset(config.columns_q4)\n",
+    "    df_subset_geschlecht_blink = analysis.generate_subset(config.columns_q5)\n",
+    "    df_subset_height_luft = analysis.generate_subset(config.columns_q6)\n",
+    "    df_subset_prio_luft = analysis.generate_subset(config.columns_q7)\n",
     "\n",
     "\n",
     "    pd.set_option('display.max_rows', None)  \n",
     "    pd.set_option('display.max_columns', None)  \n",
     "    pd.set_option('display.width', None)  \n",
     "    pd.set_option('display.max_colwidth', None)\n",
-    "    #display(df_subset_priohand)\n",
+    "    #display(df_subset_bmi_puls)\n",
+    "    #display(df_subset_geschlecht_wassermenge)\n",
+    "    #display(df_clean)\n",
+    "\n",
+    "    # Categorize BMI\n",
+    "    df_subset_bmi_puls['BMI_Category'] = df_subset_bmi_puls['BMI'].apply(lambda x: 'Low' if x < 24.9 else 'High')\n",
+    "\n",
+    "    # Perform t-test\n",
+    "    low_bmi_pulse = df_subset_bmi_puls[df_subset_bmi_puls['BMI_Category'] == 'Low']['Ruhepuls']\n",
+    "    high_bmi_pulse = df_subset_bmi_puls[df_subset_bmi_puls['BMI_Category'] == 'High']['Ruhepuls']\n",
+    "\n",
+    "    t_stat, p_value = stats.ttest_ind(low_bmi_pulse.dropna(), high_bmi_pulse.dropna())\n",
+    "\n",
+    "    # Display results\n",
+    "    print(f\"Low BMI Pulse Mean: {low_bmi_pulse.mean()}\")\n",
+    "    print(f\"High BMI Pulse Mean: {high_bmi_pulse.mean()}\")\n",
+    "    print(f\"T-Statistic: {t_stat}\")\n",
+    "    print(f\"P-Value: {p_value}\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
