Save clean data

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "\n",
     "    # Save the DataFrame\n",
-    "    #processor.save_to_excel()\n",
+    "    processor.save_to_excel()\n",
     "\n",
     "    pd.set_option('display.max_rows', None)  \n",
     "    pd.set_option('display.max_columns', None)  \n",
