Change project structure

--- a/notebooks/data_cleaning_notebook.ipynb
+++ b/notebooks/data_cleaning_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,9 @@
       "INFO:root:Type-based invalid rows: 54\n",
       "INFO:root:Custom invalid rows: 32\n",
       "INFO:root:Combined invalid rows: 55\n",
-      "INFO:root:Marking invalid data.\n"
+      "INFO:root:Marking invalid data.\n",
+      "INFO:root:Saving DataFrame to ../data/clean/cleaned_data.xlsx\n",
+      "INFO:root:DataFrame saved to ../data/clean/cleaned_data.xlsx\n"
      ]
     }
    ],
