Feature: detailed data cleaning notebook

--- a/notebooks/data_cleaning_notebook.ipynb
+++ b/notebooks/data_cleaning_notebook.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Cleaning and Preprocessing for Advanced Statistical Analysis\n",
+    "\n",
+    "This notebook is designed to perform comprehensive data cleaning and preprocessing to prepare datasets for advanced statistical analysis. It includes steps for handling missing values, data normalization, feature encoding, outlier detection, and data transformation. By systematically applying these cleaning techniques, the notebook ensures that the data is in the optimal format for accurate and robust statistical modeling and analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing libraries and modules\n",
+    "This section is setting up the environment by importing necessary libraries and reloading specific modules to ensure the latest versions are used. It prepares the script for data processing tasks by including essential dependencies and configurations."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +42,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Processor Initialization and Data Loading\n",
+    "\n",
+    "Purpose: Initialize the DataProcessor with the specified file path from the configuration, load the dataset into a DataFrame, and display the first few rows to provide an initial overview."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +93,10 @@
        "      <th>Unnamed: 7</th>\n",
        "      <th>Unnamed: 8</th>\n",
        "      <th>Messwert 1: Puls (in Schlägen pro Minute)</th>\n",
-       "      <th>...</th>\n",
+       "      <th>Messwert 2: Fußlänge (in cm)</th>\n",
+       "      <th>Unnamed: 11</th>\n",
+       "      <th>Messwert 3: Handlänge (in cm)</th>\n",
+       "      <th>Unnamed: 13</th>\n",
        "      <th>Messwert 4: Priorisierte Hand zum Schreiben?</th>\n",
        "      <th>Unnamed: 15</th>\n",
        "      <th>Unnamed: 16</th>\n",
@@ -93,7 +122,10 @@
        "      <td>Gewicht, Kg</td>\n",
        "      <td>BMI</td>\n",
        "      <td>Ruhepuls</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Rechts</td>\n",
+       "      <td>Links</td>\n",
+       "      <td>Rechts</td>\n",
+       "      <td>Links</td>\n",
        "      <td>(Linkshänder/Rechtshänder/Beidhändig)</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -103,7 +135,7 @@
        "      <td>Links</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Gesammthäufigkeit des Blinzelns während des  0...</td>\n",
+       "      <td>Gesammthäufigkeit des Blinzelns während des  01:56 Minuten langen Videos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -117,7 +149,10 @@
        "      <td>58</td>\n",
        "      <td>22.7</td>\n",
        "      <td>56</td>\n",
-       "      <td>...</td>\n",
+       "      <td>24</td>\n",
+       "      <td>24</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
        "      <td>Rechtshänder</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -141,7 +176,10 @@
        "      <td>69</td>\n",
        "      <td>20.4</td>\n",
        "      <td>60</td>\n",
-       "      <td>...</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
        "      <td>Rechtshänder</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -165,7 +203,10 @@
        "      <td>69</td>\n",
        "      <td>21.8</td>\n",
        "      <td>56</td>\n",
-       "      <td>...</td>\n",
+       "      <td>27</td>\n",
+       "      <td>27</td>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
        "      <td>Rechtshänder</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -189,7 +230,10 @@
        "      <td>92</td>\n",
        "      <td>26.3</td>\n",
        "      <td>72</td>\n",
-       "      <td>...</td>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20</td>\n",
        "      <td>Rechtshänder</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -203,7 +247,6 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -221,33 +264,40 @@
        "3            19              178           69       21.8   \n",
        "4            19              187           92       26.3   \n",
        "\n",
-       "  Messwert 1: Puls (in Schlägen pro Minute)  ...  \\\n",
-       "0                                  Ruhepuls  ...   \n",
-       "1                                        56  ...   \n",
-       "2                                        60  ...   \n",
-       "3                                        56  ...   \n",
-       "4                                        72  ...   \n",
+       "  Messwert 1: Puls (in Schlägen pro Minute) Messwert 2: Fußlänge (in cm)  \\\n",
+       "0                                  Ruhepuls                       Rechts   \n",
+       "1                                        56                           24   \n",
+       "2                                        60                           26   \n",
+       "3                                        56                           27   \n",
+       "4                                        72                           28   \n",
        "\n",
-       "  Messwert 4: Priorisierte Hand zum Schreiben? Unnamed: 15 Unnamed: 16  \\\n",
-       "0        (Linkshänder/Rechtshänder/Beidhändig)         NaN         NaN   \n",
-       "1                                 Rechtshänder         NaN         NaN   \n",
-       "2                                 Rechtshänder         NaN         NaN   \n",
-       "3                                 Rechtshänder         NaN         NaN   \n",
-       "4                                 Rechtshänder         NaN         NaN   \n",
+       "  Unnamed: 11 Messwert 3: Handlänge (in cm) Unnamed: 13  \\\n",
+       "0       Links                        Rechts       Links   \n",
+       "1          24                            17          17   \n",
+       "2          26                            18          18   \n",
+       "3          27                            18          18   \n",
+       "4          28                            20          20   \n",
        "\n",
-       "  Messwert 5: Wassermenge (in ml pro Tag) Unnamed: 18  \\\n",
-       "0                                     NaN         NaN   \n",
-       "1                                  1400.0         NaN   \n",
-       "2                                  1000.0         NaN   \n",
-       "3                                  1500.0         NaN   \n",
-       "4                                  3000.0         NaN   \n",
+       "  Messwert 4: Priorisierte Hand zum Schreiben?  Unnamed: 15  Unnamed: 16  \\\n",
+       "0        (Linkshänder/Rechtshänder/Beidhändig)          NaN          NaN   \n",
+       "1                                 Rechtshänder          NaN          NaN   \n",
+       "2                                 Rechtshänder          NaN          NaN   \n",
+       "3                                 Rechtshänder          NaN          NaN   \n",
+       "4                                 Rechtshänder          NaN          NaN   \n",
        "\n",
-       "   Messwert 6: Stamina mit Glas (in Sekunden)  Unnamed: 20  \\\n",
-       "0                                      Rechts        Links   \n",
-       "1                                         180          160   \n",
-       "2                                         365          275   \n",
-       "3                                         160          140   \n",
-       "4                                         NaN          NaN   \n",
+       "   Messwert 5: Wassermenge (in ml pro Tag)  Unnamed: 18  \\\n",
+       "0                                      NaN          NaN   \n",
+       "1                                   1400.0          NaN   \n",
+       "2                                   1000.0          NaN   \n",
+       "3                                   1500.0          NaN   \n",
+       "4                                   3000.0          NaN   \n",
+       "\n",
+       "  Messwert 6: Stamina mit Glas (in Sekunden) Unnamed: 20  \\\n",
+       "0                                     Rechts       Links   \n",
+       "1                                        180         160   \n",
+       "2                                        365         275   \n",
+       "3                                        160         140   \n",
+       "4                                        NaN         NaN   \n",
        "\n",
        "   Messwert 7: Luftanhalten (in Sekunden)  Unnamed: 22  \\\n",
        "0                                     NaN          NaN   \n",
@@ -256,30 +306,42 @@
        "3                                    60.0          NaN   \n",
        "4                                    85.0          NaN   \n",
        "\n",
-       "                                   Messwert 8: Video  \n",
-       "0  Gesammthäufigkeit des Blinzelns während des  0...  \n",
-       "1                                                 66  \n",
-       "2                                                 88  \n",
-       "3                                                 20  \n",
-       "4                                                NaN  \n",
-       "\n",
-       "[5 rows x 24 columns]"
+       "                                                          Messwert 8: Video  \n",
+       "0  Gesammthäufigkeit des Blinzelns während des  01:56 Minuten langen Videos  \n",
+       "1                                                                        66  \n",
+       "2                                                                        88  \n",
+       "3                                                                        20  \n",
+       "4                                                                       NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Initialize the DataProcessor with the file path from the configuration\n",
     "processor = DataProcessor(config.file_path)\n",
+    "\n",
+    "# Load the data using the DataProcessor\n",
     "df = processor.load_data()\n",
+    "\n",
+    "# Display the first few rows of the loaded dataframe\n",
     "df.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Cleaning and Transformation\n",
+    "\n",
+    "Purpose: Perform a series of data cleaning and transformation steps, including column combination, header setting, typo corrections, data type assignments, BMI calculation, age correction, column standardization, and conversion to numeric data types."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -292,13 +354,16 @@
     }
    ],
    "source": [
+    "# Combine columns 17 and 18 in the dataset\n",
     "processor.combine_columns(17, 18)\n",
+    "\n",
+    "# Drop columns that are entirely empty\n",
     "processor.drop_empty_columns()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -515,13 +580,15 @@
        "5                         17  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Set new headers for the DataFrame\n",
     "processor.set_headers(config.new_headers)\n",
+    "\n",
     "df.head()"
    ]
   },
@@ -751,10 +818,15 @@
     }
    ],
    "source": [
-    "processor.apply_corrections('Geschlecht', config.typos)\n",
-    "processor.apply_corrections('Priorisierte Hand', config.typos)\n",
-    "processor.correct_column()\n",
     "\n",
+    "# Apply typo corrections to the 'Geschlecht' column\n",
+    "processor.apply_corrections('Geschlecht', config.typos)\n",
+    "\n",
+    "# Apply typo corrections to the 'Priorisierte Hand' column\n",
+    "processor.apply_corrections('Priorisierte Hand', config.typos)\n",
+    "\n",
+    "# Correct specific columns in the DataFrame\n",
+    "processor.correct_column()\n",
     "\n",
     "processor.df.loc[:75, 'Type'] = 'Studierende'\n",
     "processor.df.loc[76:, 'Type'] = 'simulierte Daten'\n",
