Feature: detailed data_cleaning notebook

--- a/notebooks/data_cleaning_notebook.ipynb
+++ b/notebooks/data_cleaning_notebook.ipynb
@@ -1137,7 +1137,9 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "Summary: The data cleaning process successfully transforms raw data into a clean, structured dataset. By handling missing values, normalizing features, correcting typos, and identifying invalid data, the resulting dataset is consistent and error-free. This ensures it is ready for accurate statistical modeling, providing a robust foundation for generating reliable insights."
+    "Summary: The data cleaning process successfully transforms raw data into a clean, structured dataset. By handling missing values, normalizing features, correcting typos, and identifying invalid data, the resulting dataset is consistent and error-free. This ensures it is ready for accurate statistical modeling, providing a robust foundation for generating reliable insights.\n",
+    "\n",
+    "The default save path for the clean data is : /data/clean/cleaned_data.xlsx"
    ]
   },
   {
