Feature: detailed statistical_study notebook

--- a/notebooks/statistical_study_notebook.ipynb
+++ b/notebooks/statistical_study_notebook.ipynb
@@ -2,88 +2,89 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Low BMI Pulse Mean: 73.21538461538462\n",
-      "High BMI Pulse Mean: 76.79310344827586\n",
-      "T-Statistic: -1.1804182990314658\n",
-      "P-Value: 0.24087686510365608\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
     "import importlib\n",
-    "sys.path.insert(1, os.path.abspath('../scripts'))\n",
-    "import statistical_analysis\n",
-    "importlib.reload(statistical_analysis)\n",
-    "from statistical_analysis import StatisticalAnalysis\n",
-    "sys.path.insert(1, os.path.abspath('../configs'))\n",
-    "import config # type: ignore\n",
-    "importlib.reload(config)\n",
+    "\n",
+    "sys.path.insert(0, os.path.abspath('../src'))\n",
+    "\n",
+    "import scripts.statistical_analysis\n",
+    "import configs\n",
+    "\n",
+    "importlib.reload(sys.modules['scripts.statistical_analysis'])\n",
+    "importlib.reload(sys.modules['configs.config'])\n",
+    "\n",
+    "from scripts.statistical_analysis import StatisticalAnalysis\n",
+    "from configs import config\n",
+    "\n",
     "import pandas as pd\n",
     "from scipy import stats\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import statsmodels.api as sm\n",
-    "from IPython.display import display\n",
-    "\n",
-    "\n",
-    "def main():\n",
-    "\n",
-    "    analysis = StatisticalAnalysis('../data/clean/cleaned_data.xlsx')\n",
-    "    df_clean = analysis.load_clean_data()\n",
-    "    #analysis.summarize_data()\n",
-    "\n",
-    "\n",
-    "    df_subset_bmi_puls = analysis.generate_subset(config.columns_q1)\n",
-    "    df_subset_priohand = analysis.generate_subset(config.columns_q2)\n",
-    "    df_subset_geschlecht_wassermenge = analysis.generate_subset(config.columns_q3)\n",
-    "    df_subset_blink = analysis.generate_subset(config.columns_q4)\n",
-    "    df_subset_geschlecht_blink = analysis.generate_subset(config.columns_q5)\n",
-    "    df_subset_height_luft = analysis.generate_subset(config.columns_q6)\n",
-    "    df_subset_prio_luft = analysis.generate_subset(config.columns_q7)\n",
-    "\n",
-    "\n",
-    "    pd.set_option('display.max_rows', None)  \n",
-    "    pd.set_option('display.max_columns', None)  \n",
-    "    pd.set_option('display.width', None)  \n",
-    "    pd.set_option('display.max_colwidth', None)\n",
-    "    #display(df_subset_bmi_puls)\n",
-    "    #display(df_subset_geschlecht_wassermenge)\n",
-    "    #display(df_clean)\n",
-    "\n",
-    "    # Categorize BMI\n",
-    "    df_subset_bmi_puls['BMI_Category'] = df_subset_bmi_puls['BMI'].apply(lambda x: 'Low' if x < 24.9 else 'High')\n",
-    "\n",
-    "    # Perform t-test\n",
-    "    low_bmi_pulse = df_subset_bmi_puls[df_subset_bmi_puls['BMI_Category'] == 'Low']['Ruhepuls']\n",
-    "    high_bmi_pulse = df_subset_bmi_puls[df_subset_bmi_puls['BMI_Category'] == 'High']['Ruhepuls']\n",
-    "\n",
-    "    t_stat, p_value = stats.ttest_ind(low_bmi_pulse.dropna(), high_bmi_pulse.dropna())\n",
-    "\n",
-    "    # Display results\n",
-    "    print(f\"Low BMI Pulse Mean: {low_bmi_pulse.mean()}\")\n",
-    "    print(f\"High BMI Pulse Mean: {high_bmi_pulse.mean()}\")\n",
-    "    print(f\"T-Statistic: {t_stat}\")\n",
-    "    print(f\"P-Value: {p_value}\")\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()\n",
-    "\n"
+    "from IPython.display import display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "analysis = StatisticalAnalysis('../data/clean/cleaned_data.xlsx')\n",
+    "df_clean = analysis.load_clean_data()\n",
+    "\n",
+    "\n",
+    "df_subset_bmi_puls = analysis.generate_subset(config.columns_q1)\n",
+    "df_subset_priohand = analysis.generate_subset(config.columns_q2)\n",
+    "df_subset_geschlecht_wassermenge = analysis.generate_subset(config.columns_q3)\n",
+    "df_subset_blink = analysis.generate_subset(config.columns_q4)\n",
+    "df_subset_geschlecht_blink = analysis.generate_subset(config.columns_q5)\n",
+    "df_subset_height_luft = analysis.generate_subset(config.columns_q6)\n",
+    "df_subset_prio_luft = analysis.generate_subset(config.columns_q7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Scale Types of Data\n",
+    "\n",
+    "- **Nominal**: Categories without a meaningful order.\n",
+    "  - Type (Type of participants)\n",
+    "  - Geschlecht (Gender)\n",
+    "  - Priorisierte Hand (Dominant Hand)\n",
+    "\n",
+    "- **Ordinal**: Categories with a meaningful order but no consistent difference between them.\n",
+    "  - Gruppe (Group)\n",
+    "\n",
+    "- **Interval**: Numerical values with consistent differences but no true zero.\n",
+    "  - None in this dataset.\n",
+    "\n",
+    "- **Ratio**: Numerical values with a true zero and consistent differences.\n",
+    "  - Alter, Jahre (Age in years)\n",
+    "  - Körpergröße, cm (Height in cm)\n",
+    "  - Gewicht, Kg (Weight in Kg)\n",
+    "  - BMI\n",
+    "  - Ruhepuls (Resting Heart Rate)\n",
+    "  - Fußlänge Rechts (cm) (Foot Length Right)\n",
+    "  - Fußlänge Links (cm) (Foot Length Left)\n",
+    "  - Handlänge Rechts (cm) (Hand Length Right)\n",
+    "  - Handlänge Links (cm) (Hand Length Left)\n",
+    "  - Wassermenge (ml/Tag) (Water Intake per Day)\n",
+    "  - Stamina Rechts (s) (Stamina Right Hand)\n",
+    "  - Stamina Links (s) (Stamina Left Hand)\n",
+    "  - Luftanhalten (s) (Breath Holding Duration)\n",
+    "  - Häufigkeit Blinzeln (/min) (Blink Frequency per Minute)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
